--- a/views/main.html
+++ b/views/main.html
@@ -8,7 +8,8 @@
               <div class="card card-signup">
                 <div class="header header-primary text-center">
                   <h1 class="text-center">
-                    <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.34145383.png" alt="{{appTitle}}" />
+                    <!-- <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.34145383.png" alt="{{appTitle}}" /> -->
+                    <img class="img-responsive" style="display: inline-block" src="http://placehold.it/400x200" alt="{{appTitle}}" />
                   </h1>
                   <br />
                   <h4>Login</h4>
