--- a/views/main.html
+++ b/views/main.html
@@ -8,11 +8,11 @@
               <div class="card card-signup">
                 <div class="header header-primary text-center">
                   <h1 class="text-center">
-                    <!-- <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.34145383.png" alt="{{appTitle}}" /> -->
-                    <img class="img-responsive" style="display: inline-block" src="http://placehold.it/400x200" alt="{{appTitle}}" />
+                    <!-- <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.png" alt="{{appTitle}}" /> -->
+                    <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.afaaa767.jpg" alt="{{appTitle}}" />
                   </h1>
                   <br />
-                  <h4>Login</h4>
+                  <h4 class="text-primary">Login</h4>
                 </div>
                 <form name="userForm" ng-submit="submitForm(userForm.$valid, email, password)" novalidate>
                   <div class="language-select text-center bg-primary" ng-controller="LanguageselectCtrl" ng-if="Utils.keys(grupo.multilingua.linguas).length > 1"
