--- a/views/loggedin.html
+++ b/views/loggedin.html
@@ -47,7 +47,7 @@ background-position: center bottom;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-4">
-                    <img class="img-responsive page-header-logo" src="images/logo-campanha.34145383.png" alt="{{appTitle}}" />
+                    <img class="img-responsive page-header-logo" src="images/logo-campanha.png" alt="{{appTitle}}" />
                 </div>
             </div>
         </div>
