--- a/views/loggedin.html
+++ b/views/loggedin.html
@@ -9,9 +9,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#!/profile">
+            <!-- <a class="navbar-brand" href="#!/profile">
                 <img class="img-responsive" src="images/logo-top.14a83828.svg" alt="{{appTitle}}" />
-            </a>
+            </a> -->
         </div>
 
         <div class="collapse navbar-collapse" id="menuprincipal">
@@ -47,7 +47,7 @@ background-position: center bottom;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-4">
-                    <img class="img-responsive page-header-logo" src="images/logo-campanha.png" alt="{{appTitle}}" />
+                    <img class="img-responsive page-header-logo" src="images/logo-campanha.afaaa767.jpg" alt="{{appTitle}}" />
                 </div>
             </div>
         </div>
