--- a/views/main.html
+++ b/views/main.html
@@ -63,10 +63,8 @@
                       </div>
                       <div class="col-xs-12">
                         <!-- <div ng-include="'/views/footer.html'"></div> -->
-                        <div class="alert alert-primary text-center" role="alert" style="margin-bottom: 0;">
-                          <p><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Em caso de
-                            dúvidas, entre em contato pelo telefone {{grupo.telefone}} ou pelo
-                            e-mail <a href="mailto:{{grupo.email}}">{{grupo.email}}</a></p>
+                        <div class="alert alert-primary text-center" role="alert" style="margin-bottom: 0; font-size: 12px;">
+                          <p><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span translate="Em caso de dúvidas entre em contato com" translate-value-footeremail="{{grupo.email}}" translate-value-footertelefone="{{grupo.telefone}}" ></span></p>
                         </div>
                       </div>
                     </div>
