--- a/views/profile.html
+++ b/views/profile.html
@@ -28,10 +28,10 @@
             <!-- label padrao para todos os campos -->
 
             <label for="{{atribuido[0].atribuicao + campo.key}}">
-                <span>{{checkLabel(campo.label, campo.customLabel)}}</span>
+                <span translate>{{checkLabel(campo.label, campo.customLabel)}}</span>
                 <span ng-show="campo.obrigatorio">*</span>
                 <br>
-                <small> <em>{{campo.customPlaceholder | iif : campo.customPlaceholder : campo.placeholder}}</em></small>
+                <small> <em >{{campo.customPlaceholder | iif : campo.customPlaceholder : campo.placeholder | translate}}</em></small>
             </label>
 
             <!-- TitularPassaporte.Numero (text) / TitularPassaporte.Emissao (date-string) / TitularPassaporte.Validade (date-string) -->
