--- a/views/profile.html
+++ b/views/profile.html
@@ -4,7 +4,7 @@
     <div class="alert-icon">
         <i class="material-icons">error_outline</i>
     </div>
-    <p><strong>Información importante: <br>Es obligatorio presentar el Certificado Internacional de Vacunación contra la Fiebre Amarilla para su viaje a Brasil. Le recomendamos que tome la vacuna contra el Sarampión.</strong></p>
+    <p><strong>Información importante: <br>Es obligatorio presentar el Certificado Internacional de Vacunación contra la Fiebre Amarilla para su viaje a Brasil. Le recomendamos que tome la vacuna contra el Sarampión también.</strong></p>
 </div>
 
 <p>{{titular.Nome}},
