--- a/views/profile.html
+++ b/views/profile.html
@@ -12,7 +12,7 @@
 </p>
 
 
-<p><span translate>O prazo limite é dia</span> {{grupo.deadlineInscricao}}.</p>
+<p><span translate>O prazo limite é dia</span> <span ng-if="currentLocaleDisplayName === 'es-ES'">12/11/19</span><span ng-if="currentLocaleDisplayName === 'pt-BR'">08/11/19</span>.</p>
 
 <p><span translate="Profile.MandatoryFields"></span></p>
 
