--- a/views/loggedin-fullwidth.html
+++ b/views/loggedin-fullwidth.html
@@ -23,6 +23,9 @@
                     <a href="#!/profile">{{'Menu.Inscricao' | translate}}</a>
                 </li>
                 <li>
+                    <a href="#!/passeio">{{'Menu.Passeios' | translate}}</a>
+                </li>
+                <li>
                     <a href="" ng-click="logout()">
                         <span class=' glyphicon glyphicon-log-out'></span>{{'Menu.Sair' | translate}}</a>
                 </li>
@@ -32,13 +35,13 @@
     </div>
 </nav>
 
-<div class="page-header clear-filter purple-filter " style="position: relative; overflow: hidden; background-image: url('images/cover.752f60eb.jpg'); background-size: cover;
+<div class="page-header clear-filter purple-filter " style="position: relative; overflow: hidden; background-image: url('images/cover.83276b54.jpg'); background-size: cover;
 background-position: center bottom;">
     <div class="" style="" data-rellax-speed="-1" data-rellax-percentage="0">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-4">
-                    <img class="img-responsive page-header-logo" src="images/logo-campanha.afaaa767.jpg" alt="{{appTitle}}" />
+                    <img class="img-responsive page-header-logo" src="images/logo-campanha.194a1d70.png" alt="{{appTitle}}" />
                 </div>
             </div>
         </div>
