--- a/views/main.html
+++ b/views/main.html
@@ -1,18 +1,13 @@
 <div class="v-container">
-  <div class="v-container-inner" style="background-image: url('../images/cover.752f60eb.jpg'); background-size: cover; background-position: bottom center;">
+  <div class="v-container-inner" style="background-image: url('../images/cover.83276b54.jpg'); background-size: cover; background-position: bottom center;">
     <div class="wrapper">
       <div class="header">
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
               <div class="card card-signup">
-                <div class="header header-primary text-center">
-                  <h1 class="text-center">
-                    <!-- <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.png" alt="{{appTitle}}" /> -->
-                    <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.afaaa767.jpg" alt="{{appTitle}}" />
-                  </h1>
-                  <br />
-                  <h4 class="text-primary">Login</h4>
+                <div style="padding: 15px;">
+                  <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.194a1d70.png" alt="{{appTitle}}" />
                 </div>
                 <form name="userForm" ng-submit="submitForm(userForm.$valid, email, password)" novalidate>
                   <div class="language-select text-center bg-primary" ng-controller="LanguageselectCtrl" ng-if="Utils.keys(grupo.multilingua.linguas).length > 1"
