--- a/views/loggedin-fullwidth.html
+++ b/views/loggedin-fullwidth.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- <a class="navbar-brand" href="#!/profile">
-                <img class="img-responsive" src="images/logo-top.14a83828.svg" alt="{{appTitle}}" />
+                <img class="img-responsive" src="images/logo-top.svg" alt="{{appTitle}}" />
             </a> -->
         </div>
 
@@ -35,13 +35,13 @@
     </div>
 </nav>
 
-<div class="page-header clear-filter purple-filter " style="position: relative; overflow: hidden; background-image: url('images/cover.83276b54.jpg'); background-size: cover;
+<div class="page-header clear-filter purple-filter " style="position: relative; overflow: hidden; background-image: url('images/cover.jpg'); background-size: cover;
 background-position: center bottom;">
     <div class="" style="" data-rellax-speed="-1" data-rellax-percentage="0">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-4">
-                    <img class="img-responsive page-header-logo" src="images/logo-campanha.194a1d70.png" alt="{{appTitle}}" />
+                    <img class="img-responsive page-header-logo" src="images/logo-campanha.png" alt="{{appTitle}}" />
                 </div>
             </div>
         </div>
