--- a/views/abada.html
+++ b/views/abada.html
@@ -1,1 +1,1 @@
-<p>This is the abada view.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GAyMoX4ag3w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
